--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -35,7 +35,7 @@
 
     - name: Call latest nexus uri to get redirection
       ansible.builtin.uri:
-        url: "{{ nexus_download_url }}/latest-unix.tar.gz"
+        url: "{{ nexus_download_url }}/latest-linux-x86_64.tar.gz"
         method: CONNECT
         status_code: 302
         validate_certs: "{{ nexus_download_ssl_verify | default(omit) }}"
@@ -48,7 +48,7 @@
         nexus_version: >-
           {{
             nexus_latest_uri_call.location
-            | regex_replace("^https://.*nexus-(\d*\.\d*\.\d*-\d*)-unix.tar.gz", "\1")
+            | regex_replace("^https://.*nexus-(\d*\.\d*\.\d*-\d*)-linux-x86_64.tar.gz", "\1")
           }}
         nexus_version_detected_from: latest
 
@@ -64,7 +64,7 @@
 
 - name: Register nexus package name
   ansible.builtin.set_fact:
-    nexus_package: nexus-{{ nexus_version }}-unix.tar.gz
+    nexus_package: nexus-{{ nexus_version }}-linux-x86_64.tar.gz
 
 - name: Download nexus_package
   ansible.builtin.get_url:
